Implementing loop support